--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <link rel="manifest" href="/site.webmanifest" />
 
     <title>Simple Attendance</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+    />
   </head>
   <body>
     <div id="root"></div>
